# advent-of-code-2024

./: .gitignore  README.md  pyproject.toml
day01/: README.md  day01.py
day02/: README.md  day02.py
day03/: README.md  day03.py
day04/: README.md  day04.py
day05/: README.md  day05.py
day06/: README.md  day06.py
day07/: day07.py
day08/: day08.py
day09/: day09.py
day10/: day10.py
day11/: day11.py
day12/: day12.py  foo.txt
utilities/: d2.py  matrix.py  test_d2.py  test_matrix.py  unittest.py
