[project]
name = "aoc2024"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tom Gagnier", email = "tomgagnier@gmail.com" }
]
dependencies = [
    "sortedcontainers>=2.4.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["aoc2024"]
